footer section done

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      
     <!-- Header section start  -->
      <header class="bg-orange-100">
-           <div class="flex flex-row items-center justify-between py-4 px-8">
+           <div class="flex flex-row items-center justify-between py-4 px-8 ">
             <div class="w-[150px] md:w-[291px]">
                 <!-- Text content  -->
                  <img src="images/logo.png" alt="">
@@ -81,7 +81,7 @@
 
            <!-- content section  -->
            <div class="w-full flex flex-col md:flex-row px-8 py-3 md:items-center">
-            <div class="w-1/2 flex flex-col items-start">
+            <div class="w-1/2 flex flex-col items-start pl-16">
                 <h1 class="text-6xl font-bold md:mr-16"><span class="text-orange-400 pt-4">Be the Penguins</span> <br>
                  of Winter</h1>
                 <p class="text-gray-400 md:pt-8 md:pb-4">Lorem Ipsum is simply dummy text of the printing <br> 
@@ -89,7 +89,7 @@
                  
                 <button class="text-white bg-green-500 font-semibold border-2 border-red-400 rounded-lg py-2 px-4">BUY NOW</button>
             </div>
-            <div class="w-1/2">
+            <div class="w-1/2 pl-12">
                 <img src="images/model.png" alt="">
             </div>
            </div>
