Problme solve done

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
            <!-- content section  -->
            <div class="w-full flex flex-col md:flex-row px-8 py-3 md:items-center">
-            <div class="w-1/2 flex flex-col items-start pl-16">
+            <div class="w-1/2 flex flex-col items-start md:pl-16">
                 <h1 class="text-6xl font-bold md:mr-16"><span class="text-orange-400 pt-4">Be the Penguins</span> <br>
                  of Winter</h1>
                 <p class="text-gray-400 md:pt-8 md:pb-4">Lorem Ipsum is simply dummy text of the printing <br> 
@@ -223,32 +223,31 @@
                                 </div>
                              </div>
                          </div>
-    
-                         <div class="rounded-2xl pt-4">
-                            <div class=" p-4 card card-compact bg-base-100 md:w-80 shadow-xl">
-                                <figure>
-                                  <img class="bg-gray-300 rounded-lg p-4"
-                                    src="images/jacket-5.png"
-                                    alt="Shoes" />
-                                </figure>
-                                <div class="card-body">
-                                  <h2 class="card-title font-bold text-2xl">Man Leather Jackets</h2>
-                                  <p class="text-gray-400 ">Lorem Ipsum is simply dummy text of the 
-                                    printing and typesetting industry.If a dog chews shoes whose shoes does he choose?</p>
-                                  <div class="card-actions flex justify-between items-center">
-                                    <h1 class="text-3xl font-bold text-orange-400">$689</h1>
+                         <div class="rounded-2xl pt-4 pt-12">
+                          <div class=" p-4 card card-compact bg-base-100 md:w-80 shadow-xl">
+                              <figure>
+                                <img class="bg-gray-300 rounded-lg p-4"
+                                  src="images/jacket-6.png"
+                                  alt="Shoes" />
+                              </figure>
+                              <div class="card-body">
+                                <h2 class="card-title font-bold text-2xl">Snowboard Jacket </h2>
+                                <p class="text-gray-400 ">Lorem Ipsum is simply dummy text of the 
+                                  printing and typesetting industry.If a dog chews shoes whose shoes does he choose?</p>
+                                <div class="card-actions flex justify-between items-center">
+                                  <h1 class="text-3xl font-bold text-orange-400">$550</h1>
+                                  
+                                  <div class=" flex bg-green-300 justify-center p-2 rounded-lg border-2 border-gray-500 text-red-500 hover:bg-orange-500 hover:text-white ">
+                                      <div class="w-8  items-center">
+                                      <img src="images/shopping-cart 1.png" alt="">
+                                      </div>
+                                      <button class=" text-white font-semibold">Buy Now</button>
 
-                                    <div class=" flex bg-green-300 justify-center p-2 rounded-lg border-2 border-gray-500 text-red-500 hover:bg-orange-500 hover:text-white ">
-                                        <div class="w-8  items-center">
-                                        <img src="images/shopping-cart 1.png" alt="">
-                                        </div>
-                                        <button class=" text-white font-semibold">Buy Now</button>
-
-                                    </div>
                                   </div>
                                 </div>
                               </div>
-                         </div>
+                           </div>
+                       </div>
                          <div class="rounded-2xl pt-4">
                             <div class=" p-4 card card-compact bg-base-100 md:w-80 shadow-xl">
                                 <figure>
